--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="theme-color" content="#0A0F1E">
 <title>Sunny Cleaning Services - Sistema</title>
+<link rel="icon" href="favicon.ico">
+<link rel="apple-touch-icon" href="apple-touch-icon.png">
 <style>
   * { margin: 0; padding: 0; box-sizing: border-box; }
   body { background: #0A0F1E; font-family: 'DM Sans', sans-serif; overflow-x: hidden; }
@@ -23,6 +25,7 @@
 
 <!-- Firebase SDK -->
 <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
 <script>
   firebase.initializeApp({
@@ -43,7 +46,21 @@
 
 <script type="text/babel">
 const{useState,useMemo,useCallback,useEffect}=React;
+const auth=firebase.auth();
 
+
+
+function downloadFile(filename, text, mime="application/json"){
+  const blob = new Blob([text], {type: mime});
+  const url = URL.createObjectURL(blob);
+  const a = document.createElement("a");
+  a.href = url;
+  a.download = filename;
+  document.body.appendChild(a);
+  a.click();
+  a.remove();
+  URL.revokeObjectURL(url);
+}
 // Firebase Firestore wrapper (same interface as window.storage)
 const FB={
   get:async(k)=>{
@@ -82,7 +99,7 @@ const MO=["Janeiro","Fevereiro","Março","Abril","Maio","Junho","Julho","Agosto"
 const fm=v=>parseFloat(v||0).toLocaleString("pt-BR",{minimumFractionDigits:2,maximumFractionDigits:2});
 const DSC=["Cleaning Service","Extra Cleaning Service","Deep Cleaning Service","Restocking Items","Touch Up","Refresh Cleaning + Inventory","Outdoor Area","Cancel Stay Full Clean","Propane Tank Exchange","AC Filter","Postage (Cost)","Postage (Postal)","Cleaning + Inventory","Airbnb Setup","Extra - Pet Hair","Laundry"];
 const LOGO="";
-const SunnyLogo=({h=34})=><svg width={h*2.2} height={h} viewBox="0 0 220 100" xmlns="http://www.w3.org/2000/svg"><text x="5" y="82" fontFamily="Georgia,serif" fontWeight="800" fontSize="68" fill="#1B2A4A" letterSpacing="-2">Sunny</text><path d="M130 8 Q170 2 195 30" stroke="#00E5FF" strokeWidth="7" fill="none" strokeLinecap="round"/><path d="M125 22 Q160 14 188 42" stroke="#00C4D8" strokeWidth="6.5" fill="none" strokeLinecap="round"/><path d="M122 36 Q154 28 180 54" stroke="#0094B0" strokeWidth="6" fill="none" strokeLinecap="round"/><polygon points="118,28 121,18 124,28 134,31 124,34 121,44 118,34 108,31" fill="#1B8A9A"/><polygon points="119.5,26 121,22 122.5,26 126.5,27.5 122.5,29 121,33 119.5,29 115.5,27.5" fill="#00C4D8"/></svg>;
+const SunnyLogo=({h=34})=><img src="sunny-logo.png" alt="Sunny" style={{height:h,width:"auto",objectFit:"contain",display:"block"}}/>;
 const EC=["Pagamento Cliente (Invoice)","Plataforma (Turno/Airbnb)","Gorjeta/Extra","Deep Cleaning Avulso","Outro Serviço","Outra Entrada"];
 const SC=["Pagamento Funcionário","Produtos Limpeza","Gasolina/Transporte","Tel/Internet/Software","Lavanderia","Seguro/Impostos","Manutenção","Outra Despesa"];
 const LT=[{c:"Lençol Fitted",s:["Twin","Full","Queen","King"]},{c:"Lençol Flat",s:["Twin","Full","Queen","King"]},{c:"Fronha Standard",s:["Standard"]},{c:"Fronha King",s:["King"]},{c:"Toalha Banho",s:["Standard"]},{c:"Toalha Rosto",s:["Standard"]},{c:"Washcloth",s:["Standard"]},{c:"Toalha Makeup",s:["Standard"]},{c:"Toalha Piscina",s:["Standard"]}];
@@ -91,7 +108,67 @@ const IPROD=[{id:1,n:"Clorox",cat:"Limpeza",u:"un",q:12,m:5,cost:4.99},{id:2,n:"
 
 function gImg(emp,wk,items,total,co){const cv=document.createElement("canvas"),W=1190,H=1684;cv.width=W;cv.height=H;const c=cv.getContext("2d"),s=2;c.fillStyle="#FFF";c.fillRect(0,0,W,H);c.fillStyle="#0B0E14";c.fillRect(0,0,W,200);c.fillStyle="#00B4D8";c.beginPath();c.arc(90,52,32,0,Math.PI*2);c.fill();c.fillStyle="#0B0E14";c.font="bold 26px Arial";c.fillText("S",80,62);c.fillStyle="#FFF";c.font="bold 24px Arial";c.fillText(co.name,140,48);c.font="15px Arial";c.fillStyle="rgba(255,255,255,0.5)";c.fillText(co.address+" | "+co.phone,140,76);c.fillStyle="#FFF";c.font="bold 18px Arial";c.textAlign="right";c.fillText("COMPROVANTE DE PAGAMENTO",W-60,48);c.textAlign="left";let y=136;c.fillStyle="#F0FDF9";c.fillRect(50,y,W-100,92);c.strokeStyle="#00B4D8";c.lineWidth=1;c.strokeRect(50,y,W-100,92);c.fillStyle="#888";c.font="14px Arial";c.fillText("FUNCIONÁRIO",68,y+24);c.fillStyle="#111";c.font="bold 26px Arial";c.fillText(emp,68,y+60);c.fillStyle="#888";c.font="14px Arial";c.textAlign="right";c.fillText("PERÍODO",W-68,y+24);c.fillStyle="#111";c.font="bold 22px Arial";c.fillText(wk,W-68,y+60);c.textAlign="left";y=256;c.fillStyle="#0B0E14";c.fillRect(50,y,W-100,40);c.fillStyle="#FFF";c.font="bold 14px Arial";c.fillText("#",66,y+26);c.fillText("PROPRIEDADE",100,y+26);c.fillText("DATA",580,y+26);c.textAlign="right";c.fillText("VALOR",W-68,y+26);c.textAlign="left";y+=40;items.forEach((it,i)=>{const rh=36;if(i%2===0){c.fillStyle="#F9FAFB";c.fillRect(50,y,W-100,rh);}c.fillStyle="#888";c.font="15px Arial";c.fillText(String(i+1),66,y+24);c.fillStyle="#333";c.fillText((it.propName||it.property||"").slice(0,45),100,y+24);c.fillStyle="#888";c.fillText(it.date||"—",580,y+24);c.fillStyle="#0094B0";c.font="bold 16px Arial";c.textAlign="right";c.fillText(`$ ${it.employeePay.toFixed(2)}`,W-68,y+24);c.textAlign="left";y+=rh;});y+=6;c.fillStyle="#0B0E14";c.fillRect(50,y,W-100,2);y+=12;c.fillStyle="#111";c.font="bold 20px Arial";c.fillText(`TOTAL: ${items.length} casas`,66,y+24);c.fillStyle="#0094B0";c.font="bold 30px Arial";c.textAlign="right";c.fillText(`$ ${total.toFixed(2)}`,W-68,y+28);c.textAlign="left";y+=60;c.strokeStyle="#E5E7EB";c.strokeRect(50,y,W-100,80);c.fillStyle="#888";c.font="bold 14px Arial";c.fillText("INFORMAÇÕES DA EMPRESA",68,y+24);c.font="15px Arial";c.fillStyle="#444";c.fillText(co.name+" | "+co.address,68,y+50);c.fillText("Tel: "+co.phone+" | "+co.zelle,68,y+70);y+=110;c.fillStyle="#ccc";c.font="13px Arial";c.textAlign="center";c.fillText("Comprovante gerado por Sunny Cleaning | "+new Date().toLocaleDateString("pt-BR"),W/2,y);const lk=document.createElement("a");lk.download=`Pgto_${emp.replace(/\s/g,"_")}_${wk.replace(/\s/g,"_")}.png`;lk.href=cv.toDataURL("image/png",1.0);lk.click();}
 
+
+function Login({onLoggedIn}){
+  const[email,setEmail]=useState("");
+  const[pw,setPw]=useState("");
+  const[msg,setMsg]=useState("");
+  const[busy,setBusy]=useState(false);
+
+  const doLogin=async()=>{
+    setMsg("");
+    setBusy(true);
+    try{
+      await auth.signInWithEmailAndPassword(email.trim(), pw);
+      onLoggedIn && onLoggedIn();
+    }catch(e){
+      console.error(e);
+      setMsg("Login inválido. Verifique e-mail e senha.");
+    }finally{
+      setBusy(false);
+    }
+  };
+
+  return (
+    <div style={{minHeight:"100vh",display:"flex",alignItems:"center",justifyContent:"center",padding:18,background:"#0A0F1E"}}>
+      <div style={{width:420,maxWidth:"100%",background:"#111A2E",border:"1px solid #1F2A44",borderRadius:16,padding:18,boxShadow:"0 20px 60px rgba(0,0,0,.35)"}}>
+        <div style={{display:"flex",alignItems:"center",gap:10,marginBottom:10}}>
+          <SunnyLogo h={40}/>
+          <div>
+            <div style={{fontWeight:800,color:"#00B4D8",fontSize:16}}>Sunny System</div>
+            <div style={{fontSize:12,color:"#9FB0CF"}}>Acesso restrito</div>
+          </div>
+        </div>
+
+        <div style={{display:"grid",gap:10,marginTop:12}}>
+          <div>
+            <label style={{fontSize:12,color:"#9FB0CF"}}>E-mail</label>
+            <input value={email} onChange={e=>setEmail(e.target.value)} style={{width:"100%",padding:"12px 12px",borderRadius:12,border:"1px solid #2A3A61",background:"#0B1220",color:"#E6E6E6"}} placeholder="email@sunny.com" autoComplete="username" />
+          </div>
+          <div>
+            <label style={{fontSize:12,color:"#9FB0CF"}}>Senha</label>
+            <input type="password" value={pw} onChange={e=>setPw(e.target.value)} style={{width:"100%",padding:"12px 12px",borderRadius:12,border:"1px solid #2A3A61",background:"#0B1220",color:"#E6E6E6"}} placeholder="••••••••" autoComplete="current-password" />
+          </div>
+          <button onClick={doLogin} disabled={busy||!email||!pw} style={{padding:"12px 12px",borderRadius:12,border:"none",fontWeight:800,cursor:"pointer",background: busy||!email||!pw ? "#2A3A61" : "#00B4D8",color:"#061018"}}>
+            {busy ? "Entrando..." : "Entrar"}
+          </button>
+          {msg && <div style={{color:"#FFB3B3",fontSize:12}}>{msg}</div>}
+          <div style={{color:"#9FB0CF",fontSize:11,lineHeight:1.35}}>
+            Se você esqueceu a senha, peça ao administrador para redefinir no Firebase Authentication.
+          </div>
+        </div>
+      </div>
+    </div>
+  );
+}
+
+
 function App(){
+const[user,setUser]=useState(null);
+const[authReady,setAuthReady]=useState(false);
+useEffect(()=>auth.onAuthStateChanged(u=>{setUser(u);setAuthReady(true);}),[]);
+if(!authReady){return <div id="loading"><div className="spinner"></div><div>Carregando...</div></div>;}
+if(!user){return <Login/>;}
 const[vw,setVw]=useState("dashboard");
 const[db,setDb]=useState(D);const[em,setEm]=useState(IE);const[co,setCo]=useState(DC);
 const[ss,setSs]=useState(false);const[toast,setToast]=useState("");
@@ -129,13 +206,13 @@ const cls=useMemo(()=>[...new Set(db.map(p=>p.c))].sort(),[db]);
 const clP=useMemo(()=>db.filter(p=>p.c===iC),[db,iC]);
 
 const addPi=()=>setPI([...pI,{id:Date.now(),c:"",n:"",a:"",date:"",ep:0,ip:0}]);
-const updPi=(id,f,v)=>{setPI(pI.map(i=>{if(i.id!==id)return i;const u={...i,[f]:v};if(f==="n"){const p=db.find(x=>x.n===v&&x.c===i.c);if(p){u.ep=p.ep;u.ip=p.ip;u.a=p.a;}}if(f==="c"){u.n="";u.a="";u.ep=0;u.ip=0;}return u;}));};
+const updPi=(id,f,v)=>{setPI(prev=>prev.map(i=>{if(i.id!==id)return i;const u={...i,[f]:v};if(f==="n"){const p=db.find(x=>x.n===v&&x.c===i.c);if(p){u.ep=p.ep;u.ip=p.ip;u.a=p.a;}}if(f==="c"){u.n="";u.a="";u.ep=0;u.ip=0;}return u;}));};
 const pTot=pI.reduce((s,i)=>s+(i.ep||0),0);const pInv=pI.reduce((s,i)=>s+(i.ip||0),0);
 const savP=async()=>{const e={id:Date.now(),emp:sE,week:wk,month:pM,items:pI,total:pTot,invTot:pInv,profit:pInv-pTot,at:new Date().toISOString(),casas:pI.length};const u=[e,...sP];setSP(u);await sv("sp3",u);
 const nf=[{id:Date.now()+.3,type:"saida",cat:"Pagamento Funcionário",desc:`${sE} - ${wk}`,amt:pTot,date:new Date().toISOString().split("T")[0],month:pM,week:wk,ref:"po-"+e.id},{id:Date.now()+.4,type:"entrada",cat:"Pagamento Cliente (Invoice)",desc:`Ref. ${sE} - ${wk}`,amt:pInv,date:new Date().toISOString().split("T")[0],month:pM,week:wk,ref:"pi-"+e.id}];const uf=[...nf,...fin];setFin(uf);await sv("fn3",uf);setPI([]);setSE("");fl("✅ Folha salva!");setVw("history");};
 
-const addIi=()=>setII([...iI,{id:Date.now(),desc:"Cleaning Service",n:"",a:"",date:"",amt:0}]);
-const updIi=(id,f,v)=>{setII(iI.map(i=>{if(i.id!==id)return i;const u={...i,[f]:v};if(f==="n"){const p=db.find(x=>x.n===v&&x.c===iC);if(p){u.amt=p.ip;u.a=p.a;}}return u;}));};
+const addIi=()=>setII(prev=>[...prev,{id:Date.now(),desc:"Cleaning Service",n:"",a:"",date:"",amt:""}]);
+const updIi=(id,f,v)=>{setII(prev=>prev.map(i=>{if(i.id!==id)return i;const u={...i,[f]:v};if(f==="n"){const p=db.find(x=>x.n===v&&x.c===iC);if(p){u.amt=p.ip;u.a=p.a;}}return u;}));};
 const iTot=iI.reduce((s,i)=>s+(parseFloat(i.amt)||0),0);
 const savI=async()=>{const e={id:Date.now(),no:iN,date:iD,client:iC,items:iI,total:iTot,at:new Date().toISOString()};const u=[e,...sI];setSI(u);await sv("si3",u);
 const nf={id:Date.now()+.5,type:"entrada",cat:"Pagamento Cliente (Invoice)",desc:`Invoice #${iN} - ${iC}`,amt:iTot,date:iD,month:iD?MO[new Date(iD).getMonth()]:"",week:"",ref:"si-"+e.id};const uf=[nf,...fin];setFin(uf);await sv("fn3",uf);fl("✅ Invoice salva!");};
@@ -216,7 +293,22 @@ return(
 <div style={{background:`linear-gradient(135deg,#111833,#0A0F1E)`,borderBottom:"1px solid "+T.bd,padding:"10px 18px",display:"flex",justifyContent:"space-between",alignItems:"center",position:"sticky",top:0,zIndex:100}}>
 <div style={{display:"flex",alignItems:"center",gap:10}}><SunnyLogo h={34}/><div style={{fontSize:14,fontWeight:700,color:"#00B4D8"}}>Sunny Cleaning Services</div></div>
 <button onClick={()=>setSs(!ss)} style={bt(T.c2,T.dm)}>⚙️</button></div>
-{ss&&<div style={{background:T.cd,padding:"14px 18px",borderBottom:"1px solid "+T.bd}}><div style={{display:"grid",gridTemplateColumns:"repeat(4,1fr)",gap:7}}>{Object.entries({name:"Nome",address:"End.",phone:"Tel",bank:"Banco",account:"Conta",routing:"Routing",zelle:"Zelle",venmo:"Venmo"}).map(([k,l])=><div key={k}><label style={lb}>{l}</label><input value={co[k]} onChange={e=>setCo({...co,[k]:e.target.value})} style={inp}/></div>)}</div></div>}
+{ss&&<div style={{background:T.cd,padding:"14px 18px",borderBottom:"1px solid "+T.bd}}><div style={{display:"grid",gridTemplateColumns:"repeat(4,1fr)",gap:7}}>{Object.entries({name:"Nome",address:"End.",phone:"Tel",bank:"Banco",account:"Conta",routing:"Routing",zelle:"Zelle",venmo:"Venmo"}).map(([k,l])=><div key={k}><label style={lb}>{l}</label><input value={co[k]} onChange={e=>setCo(prev=>({...prev,[k]:e.target.value}))} style={inp}/></div>)}</div></div>}
+<div style={{display:"flex",gap:8,flexWrap:"wrap",marginTop:12}}>
+  <button onClick={async()=>{
+    try{
+      const snap=await db.collection("sunny").get();
+      const out={};
+      snap.forEach(d=>{ out[d.id]=d.data()?.value; });
+      downloadFile(`sunny-export-${new Date().toISOString().slice(0,10)}.json`, JSON.stringify(out,null,2));
+      fl("✅ Exportado!");
+    }catch(e){console.error(e); fl("❌ Erro ao exportar");}
+  }} style={bt(T.ac,T.bg)}>⬇️ Exportar dados (JSON)</button>
+  <button onClick={async()=>{
+    try{ await auth.signOut(); }catch(e){console.error(e);}
+  }} style={bt("#FFB3B3",T.dm)}>Sair</button>
+</div>
+
 <div style={{display:"flex",gap:2,padding:"8px 14px",borderBottom:"1px solid "+T.bd,overflowX:"auto"}}>
 {tabs.map(t=><button key={t.id} onClick={()=>setVw(t.id)} style={{padding:"6px 10px",borderRadius:7,border:"none",cursor:"pointer",fontSize:10,fontWeight:vw===t.id?600:400,fontFamily:"inherit",whiteSpace:"nowrap",color:vw===t.id?T.bg:T.dm,background:vw===t.id?T.ac:"transparent"}}>{t.i} {t.l}</button>)}
 </div>
@@ -285,7 +377,7 @@ return(
 <select value={item.n} onChange={e=>updIi(item.id,"n",e.target.value)} style={{...sel,fontSize:10,fontWeight:item.n?600:400,background:item.n?T.gr+"12":T.cd}}><option value="">—</option>{clP.map((p,i)=><option key={i} value={p.n}>{p.n} ${p.ip}</option>)}</select>
 <input value={item.a||""} onChange={e=>updIi(item.id,"a",e.target.value)} style={{...inp,fontSize:10,color:T.ac}}/>
 <input type="date" value={item.date} onChange={e=>updIi(item.id,"date",e.target.value)} style={{...inp,fontSize:9}}/>
-<input type="number" value={item.amt} onChange={e=>updIi(item.id,"amt",e.target.value)} style={{...inp,fontWeight:700,textAlign:"right",fontSize:11}}/>
+<input type="text" inputMode="decimal" value={item.amt} onChange={e=>updIi(item.id,"amt",e.target.value)} style={{...inp,fontWeight:700,textAlign:"right",fontSize:11}}/>
 <button onClick={()=>setII(iI.filter(i=>i.id!==item.id))} style={{width:24,height:24,borderRadius:5,border:"none",background:T.rd+"12",cursor:"pointer",fontSize:10,color:T.rd}}>✕</button>
 </div>)}
 {iI.length===0&&<div style={{padding:"24px 0",textAlign:"center",color:T.dm}}>Clique "+ Add"</div>}
